fixed wrapping, now shows 2x2

--- a/webstyles.css
+++ b/webstyles.css
@@ -165,6 +165,10 @@ body {
 }
 
 /* Projects */
+#projects .container {
+  max-width: 1400px;
+}
+
 #projects .container h2 {
   text-align: center;
   font-size: 5rem;
@@ -177,12 +181,15 @@ body {
   font-size: 3rem;
 }
 
+#projects p {
+  font-size: 2rem;
+}
+
 #projects .project-image {
   width: 100%;
 }
 
 #projects .project-image img {
-  display: block;
   width: 100%;
   height: auto;
   margin: auto;
@@ -193,10 +200,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
-  background: lightgoldenrodyellow;
   max-width: 100%;
+  padding: 5rem;
 }
 
 #projects .box {
@@ -204,7 +211,6 @@ body {
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  margin: 0rem;
-  background: grey;
-  max-width: 50%;
+  max-width: 40%;
+  margin: 5rem;
 }
